--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "with-ant-design",
+  "name": "runcanaries",
   "version": "1.0.0",
   "scripts": {
     "dev": "next",
@@ -7,21 +7,40 @@
     "start": "next start"
   },
   "dependencies": {
-    "@ant-design/icons": "4.2.1",
-    "@next/bundle-analyzer": "^9.1.4",
-    "antd": "4.3.0",
-    "babel-plugin-import": "1.13.0",
+    "@ant-design/icons": "4.3.0",
+    "@aws-amplify/ui-react": "^0.2.32",
+    "@next/bundle-analyzer": "^10.0.3",
+    "antd": "4.9.3",
+    "aws-amplify": "^3.3.12",
+    "babel-plugin-import": "1.13.3",
     "cross-env": "^7.0.2",
-    "dayjs": "1.8.28",
+    "dayjs": "1.9.7",
     "esm": "^3.2.25",
     "next": "latest",
     "postcss-preset-env": "^6.7.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-icons": "^4.1.0"
   },
   "browser": {
     "fs": false,
     "path": false
   },
-  "license": "MIT"
+  "license": "Apache-2.0",
+  "devDependencies": {
+    "@types/node": "^14.14.13",
+    "@types/react": "^17.0.0",
+    "@types/react-icons": "^3.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.10.0",
+    "@typescript-eslint/parser": "^4.10.0",
+    "eslint": "^7.15.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-config-standard-with-typescript": "^19.0.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^5.0.0",
+    "standard": "^16.0.3",
+    "typescript": "^4.1.3"
+  }
 }
