--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "cross-env": "^7.0.2",
     "dayjs": "1.9.7",
     "esm": "^3.2.25",
+    "graphql": "^15.4.0",
+    "graphql-request": "^3.4.0",
     "next": "latest",
     "postcss-preset-env": "^6.7.0",
     "react": "^17.0.1",
@@ -28,6 +30,7 @@
   },
   "license": "Apache-2.0",
   "devDependencies": {
+    "@types/graphql": "^14.5.0",
     "@types/node": "^14.14.13",
     "@types/react": "^17.0.0",
     "@types/react-icons": "^3.0.0",
