--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest"
   },
   "dependencies": {
     "@ant-design/icons": "4.3.0",
     "@aws-amplify/ui-react": "^0.2.32",
     "@next/bundle-analyzer": "^10.0.3",
-    "antd": "4.9.3",
+    "@rjsf/antd": "^2.4.0",
+    "@rjsf/core": "^2.4.0",
+    "antd": "4.9.4",
     "aws-amplify": "^3.3.12",
     "babel-plugin-import": "1.13.3",
     "cross-env": "^7.0.2",
@@ -18,6 +21,8 @@
     "esm": "^3.2.25",
     "graphql": "^15.4.0",
     "graphql-request": "^3.4.0",
+    "lodash.clonedeep": "^4.5.0",
+    "lodash.get": "^4.4.2",
     "next": "latest",
     "postcss-preset-env": "^6.7.0",
     "react": "^17.0.1",
@@ -30,12 +35,18 @@
   },
   "license": "Apache-2.0",
   "devDependencies": {
+    "@testing-library/dom": "^7.29.0",
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.2",
     "@types/graphql": "^14.5.0",
+    "@types/lodash.clonedeep": "^4.5.6",
+    "@types/lodash.get": "^4.4.6",
     "@types/node": "^14.14.13",
     "@types/react": "^17.0.0",
     "@types/react-icons": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^4.10.0",
     "@typescript-eslint/parser": "^4.10.0",
+    "babel-jest": "^26.6.3",
     "eslint": "^7.15.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-config-standard-with-typescript": "^19.0.1",
@@ -43,6 +54,8 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^5.0.0",
+    "jest": "^26.6.3",
+    "jest-dom": "^4.0.0",
     "standard": "^16.0.3",
     "typescript": "^4.1.3"
   }
