Update dependencies to solve dependabot alert

--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
   },
   "dependencies": {
     "@ant-design/icons": "4.3.0",
-    "@aws-amplify/ui-react": "^0.2.32",
+    "@aws-amplify/ui-react": "^0.2.33",
     "@next/bundle-analyzer": "^10.0.3",
     "@rjsf/antd": "^2.4.0",
     "@rjsf/core": "^2.4.0",
     "antd": "4.9.4",
-    "aws-amplify": "^3.3.12",
+    "aws-amplify": "3.3.13",
+    "axios": "0.21.1",
     "babel-plugin-import": "1.13.3",
     "cross-env": "^7.0.2",
     "dayjs": "1.9.7",
@@ -38,6 +39,7 @@
     "@testing-library/dom": "^7.29.0",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
+    "@types/axios": "0.14.0",
     "@types/graphql": "^14.5.0",
     "@types/lodash.clonedeep": "^4.5.6",
     "@types/lodash.get": "^4.4.6",
