--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "postcss-preset-env": "^6.7.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-icons": "^4.1.0"
+    "react-icons": "^4.1.0",
+    "sass": "^1.32.6"
   },
   "browser": {
     "fs": false,
