--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
-    "sass": "^1.32.6"
+    "sass": "^1.32.6",
+    "striptags": "^3.1.1"
   },
   "browser": {
     "fs": false,
@@ -47,6 +48,7 @@
     "@types/node": "^14.14.13",
     "@types/react": "^17.0.0",
     "@types/react-icons": "^3.0.0",
+    "@types/striptags": "^3.1.1",
     "@typescript-eslint/eslint-plugin": "^4.10.0",
     "@typescript-eslint/parser": "^4.10.0",
     "babel-jest": "^26.6.3",
