--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-plugin-import": "1.13.3",
     "cross-env": "^7.0.2",
     "dayjs": "1.9.7",
+    "enquire-js": "^0.2.1",
     "esm": "^3.2.25",
     "graphql": "^15.4.0",
     "graphql-request": "^3.4.0",
@@ -26,6 +27,8 @@
     "lodash.get": "^4.4.2",
     "next": "latest",
     "postcss-preset-env": "^6.7.0",
+    "rc-queue-anim": "^1.8.5",
+    "rc-scroll-anim": "^2.7.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
