--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "aws-amplify": "3.3.24",
     "axios": "0.21.1",
     "babel-plugin-import": "1.13.3",
+    "cookieconsent": "^3.1.1",
     "cross-env": "^7.0.2",
     "dayjs": "1.9.7",
     "enquire-js": "^0.2.1",
