--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "rc-scroll-anim": "^2.7.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-ga": "^3.3.0",
     "react-icons": "^4.1.0",
     "sass": "^1.32.6",
     "striptags": "^3.1.1"
@@ -51,6 +52,7 @@
     "@types/lodash.get": "^4.4.6",
     "@types/node": "^14.14.13",
     "@types/react": "^17.0.0",
+    "@types/react-ga": "^2.3.0",
     "@types/react-icons": "^3.0.0",
     "@types/striptags": "^3.1.1",
     "@typescript-eslint/eslint-plugin": "^4.10.0",
